got a bunch more stuff done